# data-engineering

./: .gitignore  README.md
.github/workflows/: deploys.yml
ecs/localdb/: .example-env  README.md  docker-compose.yml
ecs/localdb/docker-entrypoint-initdb.d/: init.sh
ecs/noaa/: Dockerfile  config.py  coordinates.yml  docker-compose.yml  main.py  postgresdb.py  pyproject.toml  weather.py
orchestration/: docker-compose.yaml  pyproject.toml
orchestration/config/: airflow.cfg
orchestration/dags/: api_ingestion.py  config.py
