[project]
name = "orchestration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.3",
    "duckdb>=1.5.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pdbpp>=0.12.1",
]
